# grainlify

./: docker-compose.yml  package-lock.json
.agent/workflows/: run_full_project.md
backend/: VERIFY_CALLBACK_URL.md  WEBHOOK_SECRET_EXPLAINED.md  setup_grainlify_db.sh
backend/internal/api/: api.go
backend/internal/config/: config.go
backend/internal/handlers/: admin_ecosystems.go  leaderboard.go
backend/internal/soroban/: types.go
backend/migrations/: 000025_add_ecosystem_metadata.down.sql  000025_add_ecosystem_metadata.up.sql
contracts/: .gitignore  VERSIONS.md
contracts/benchmarks/: Cargo.toml  README.md
contracts/benchmarks/benches/: bounty_escrow.rs
contracts/benchmarks/src/: lib.rs
contracts/grainlify-core/: Cargo.toml
contracts/grainlify-core/src/: governance.rs  lib.rs
contracts/program-escrow/: Cargo.toml  README.md
contracts/program-escrow/src/: lib.rs  test.rs  test_query.rs
contracts/program-escrow/test_snapshots/test/: test_multiple_program_release_schedules.1.json  test_program_automatic_release_at_timestamp.1.json  test_program_manual_trigger_before_after_timestamp.1.json  test_program_overlapping_schedules.1.json  test_register_single_program.1.json  test_single_program_release_schedule.1.json  test_verify_program_schedule_tracking_and_history.1.json
contracts/program-escrow/test_snapshots/test_query/: test_get_payouts_filtering.1.json  test_get_programs_filtering.1.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: vite-env.d.ts
frontend/src/app/: App.tsx
(+84 files in other folders)
